--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-spellchecker",
+  "name": "@paulbennetjoshua/electron-spellchecker",
   "version": "0.0.1",
   "description": "Implement spellchecking, correctly",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/paulcbetts/electron-spellchecker"
+    "url": "https://github.com/paulbennet/electron-spellchecker"
   },
   "keywords": [
     "spelling",
@@ -24,10 +24,10 @@
   "author": "Paul Betts <paul@paulbetts.org>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/paulcbetts/electron-spellchecker/issues"
+    "url": "https://github.com/paulbennet/electron-spellchecker/issues"
   },
   "main": "lib/index.js",
-  "homepage": "https://github.com/paulcbetts/electron-spellchecker",
+  "homepage": "https://github.com/paulbennet/electron-spellchecker",
   "dependencies": {
     "@paulcbetts/cld": "^2.4.6",
     "@paulcbetts/spellchecker": "^4.0.6",
