--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
   },
   "devDependencies": {
     "@kwonoj/rxjs-testscheduler-compat": "0.0.4",
+    "babel-eslint": "^10.0.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "cross-env": "^5.2.0",
+    "electron": "4.0.6",
     "electron-debug": "^2.1.0",
     "electron-mocha": "^6.0.4",
-    "electron": "4.0.6",
     "esdoc": "^1.1.0",
     "esdoc-es7-plugin": "0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
