--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "esdoc": "^1.1.0",
     "esdoc-es7-plugin": "^0.0.3",
     "esdoc-plugin-async-to-sync": "^0.5.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^5.16.0",
     "rimraf": "^2.6.3"
   }
